# sparsnas-rs

./: .travis.yml  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  README.md
src/: iterreader.rs  main.rs
